src/test/ui/issues/issue-39970.stderr
error[E0271]: type mismatch resolving `for<'a> <() as Array<'a>>::Element == ()`
  --> $DIR/issue-39970.rs:19:5
   |
LL |     fn visit() {}
   |     ---------- required by `Visit::visit`
...
LL |     <() as Visit>::visit();
   |     ^^^^^^^^^^^^^^^^^^^^ expected &(), found ()
   |
   = note: expected type `&()`
              found type `()`
   = note: required because of the requirements on the impl of `Visit` for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
